force-app/main/default/objects/Lead/fields/Admit_Type__c.field-meta.xml
<CustomField>
    <fullName>Admit_Type__c</fullName>
    <description>The category the potential applicant falls into for recruitment segmentation (Ex: New student, Transfer student, etc.)</description>
    <label>Admit Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>New Freshman</fullName>
                
                
                    <label>New Freshman</label>
                
                </value>
            
                <value>
                
                    <fullName>Transfer</fullName>
                
                
                    <label>Transfer</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>