force-app/main/default/objects/Lead/fields/Affiliation_Role__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Role__c</fullName>
    <description>The role associated to the Affiliated Account, used in the Interaction Process.</description>
    <inlineHelpText>Select the role for the affiliation with an organizational account.</inlineHelpText>
    <label>Affiliation Role</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Advisor</fullName>
                
                
                    <label>Advisor</label>
                
                </value>
            
                <value>
                
                    <fullName>Student</fullName>
                
                
                    <label>Student</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>