force-app/main/default/objects/Lead/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <description>Based on IPEDs values, which also align with the corresponding HEDA field on Contact.</description>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Hispanic or Latino</fullName>
                
                
                    <label>Hispanic or Latino</label>
                
                </value>
            
                <value>
                
                    <fullName>Not Hispanic or Latino</fullName>
                
                
                    <label>Not Hispanic or Latino</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>