force-app/main/default/objects/Lead/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Female</fullName>
                
                
                    <label>Female</label>
                
                </value>
            
                <value>
                
                    <fullName>Male</fullName>
                
                
                    <label>Male</label>
                
                </value>
            
                <value>
                
                    <fullName>Unknown</fullName>
                
                
                    <label>Unknown</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>