force-app/main/default/objects/Lead/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <description>Based on IPEDs values, which also align with the corresponding HEDA field on Contact.</description>
    <label>Race</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>American Indian or Alaska Native</fullName>
                
                
                    <label>American Indian or Alaska Native</label>
                
                </value>
            
                <value>
                
                    <fullName>Black or African American</fullName>
                
                
                    <label>Black or African American</label>
                
                </value>
            
                <value>
                
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                
                
                    <label>Native Hawaiian or Other Pacific Islander</label>
                
                </value>
            
                <value>
                
                    <fullName>White</fullName>
                
                
                    <label>White</label>
                
                </value>
            
                <value>
                
                    <fullName>Asian</fullName>
                
                
                    <label>Asian</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>