force-app/main/default/objects/Lead/fields/Recruitment_Interest__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The marketable name for an official Academic Interest (or group of interests) that the individual is inquiring about. A lookup to Plan with a filter criteria of Record Type = Recruitment. Tracked on the Opportunity when converted to a Contact.</description>
    <inlineHelpText>The marketable name for an official Academic Interest (or group of Interests) that the individual is inquiring about.</inlineHelpText>
    <label>Recruitment Interest</label>
    <lookupFilter>
        
            <active>true</active>
        
            <filterItems>
            
                <field>Plan__c.Type__c</field>
            
                <operation>equals</operation>
            
                <value>Recruitment</value>
            
            </filterItems>
        
            <isOptional>false</isOptional>
        
        </lookupFilter>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Leads with Recruitment Interest</relationshipLabel>
    <relationshipName>Recruitment_Interest_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>